--- a/tasks/homalg-project.github.io.yml
+++ b/tasks/homalg-project.github.io.yml
@@ -5,4 +5,11 @@
     meta_package: "{{ item.meta_package }}"
     subpackages: "{{ item.subpackages }}"
     used_by: "{{ item.used_by }}"
-  loop: "{{ packages }}"
+  loop: "{{ projects }}"
+
+- name: Import notebook
+  include_tasks: tasks/homalg-project.github.io_notebook.yml
+  vars:
+    url: "{{ item.url }}"
+    names: "{{ item.names }}"
+  loop: "{{ notebooks }}"
