--- a/tasks/homalg-project.github.io_subpackage_table.yml
+++ b/tasks/homalg-project.github.io_subpackage_table.yml
@@ -26,3 +26,14 @@
     path: "{{ pkg_dir }}/website/_docs/{{ meta_package.name }}/index.md"
     marker: "<!-- {mark} {{ meta_package.name }} SUBPACKAGES -->"
     block: "{{ lookup('template', 'templates/homalg-project.github.io_subpackage_table.j2') }}"
+
+- name: Create permalink
+  template:
+    src: homalg-project.github.io_permalink.j2
+    dest: "{{ pkg_dir }}/website/permalinks/pkg/{{ package.name }}.html"
+  vars:
+    path: "pkg/{{ package.name }}"
+    url: "https://github.com/homalg-project/{{ meta_package.name }}/tree/master/{{ package.name }}#readme"
+  loop: "{{ packages_enriched }}"
+  loop_control:
+    loop_var: package
