Rename package -> project for homalg-project.github.io

--- a/tasks/homalg-project.github.io.yml
+++ b/tasks/homalg-project.github.io.yml
@@ -1,6 +1,6 @@
 ---
-- name: Import meta package
-  include_tasks: tasks/homalg-project.github.io_package.yml
+- name: Import project
+  include_tasks: tasks/homalg-project.github.io_project.yml
   vars:
     meta_package: "{{ item.meta_package }}"
     subpackages: "{{ item.subpackages }}"
