--- a/tasks/package_common.yml
+++ b/tasks/package_common.yml
@@ -145,10 +145,16 @@
     state: directory
   when: not package.docu_only
 
-- name: 000_LoadPackage.tst
+- name: Remove 000_LoadPackage.tst
+  file:
+    path: "{{ pkg_dir }}/{{ package.path }}/tst/000_LoadPackage.tst"
+    state: absent
+  when: not package.docu_only
+
+- name: 100_LoadPackage.tst
   template:
-    src: 000_LoadPackage.tst.j2
-    dest: "{{ pkg_dir }}/{{ package.path }}/tst/000_LoadPackage.tst"
+    src: 100_LoadPackage.tst.j2
+    dest: "{{ pkg_dir }}/{{ package.path }}/tst/100_LoadPackage.tst"
   vars:
     tests_packages_to_load: "{{ [ package.name ] + (package.tests_additional_packages_to_load | default([])) }}"
   when: not package.docu_only
