Downgrade Macaulay2 for homalg_project
See https://github.com/homalg-project/homalg_project/commit/2572a944c523348e698e9a11a878cc2b0e31aed0

--- a/site.yml
+++ b/site.yml
@@ -904,6 +904,10 @@
           - texlive-science
           - time
           - python-pathlib
+          - install-info # needed for macaulay2 downgrade, missing dependency
+          - --allow-downgrades # hack
+          - macaulay2-common=1.16
+          - macaulay2=1.16
 
 - name: homalg-project.github.io
   hosts: homalg-project.github.io
