Add ci_gaprc to prevent accidentally testing package versions distributed with GAP

--- a/tasks/ci.yml
+++ b/tasks/ci.yml
@@ -12,6 +12,11 @@
   vars:
     ci_packages_to_test: "{{ [ package.name ] + (ci_additional_packages_to_test | default([])) }}"
 
+- name: ci_gaprc
+  copy:
+    src: ci_gaprc
+    dest: "{{ pkg_dir }}/{{ package.name }}/ci_gaprc"
+
 - name: .codecov.yml
   template:
     src: .codecov.yml.j2
