Add IO_ForHomalg to CompilerForCAP

--- a/site.yml
+++ b/site.yml
@@ -689,10 +689,12 @@
             docu_only: true
           - name: CompilerForCAP
             description: Speed up computations in CAP categories
+            has_HOMALG_IO: true
             doc_additional_latex_preamble: |
               % this is the only way to suppress an overfull hbox in the signature of CapJitIterateOverTree
               \geometry{left=26mm,right=26mm}
             tests_additional_packages_to_load:
+              - IO_ForHomalg
               - LinearAlgebraForCAP
               - RingsForHomalg
           - name: ComplexesAndFilteredObjectsForCAP
