--- a/tasks/ci.yml
+++ b/tasks/ci.yml
@@ -10,7 +10,7 @@
     dest: "{{ pkg_dir }}/{{ package.name }}/.github/workflows/Tests.yml"
     trim_blocks: false
   vars:
-    ci_packages_to_test: "{{ [ package.name ] + (ci_additional_packages_to_test | default([])) }}"
+    ci_packages_to_test: "{{ ci_additional_packages_to_test | default([]) }}"
 
 - name: ci_gaprc
   copy:
