Switch to binary codecov uploader and only upload code coverage information when running with gap-docker-master

--- a/tasks/ci.yml
+++ b/tasks/ci.yml
@@ -27,6 +27,11 @@
     src: process_coverage_ignored_lines.py
     dest: "{{ pkg_dir }}/{{ package.name }}/process_coverage_ignored_lines.py"
 
+- name: upload_codecov.sh
+  copy:
+    src: upload_codecov.sh
+    dest: "{{ pkg_dir }}/{{ package.name }}/upload_codecov.sh"
+
 - name: release-gap-package
   copy:
     src: release-gap-package
