Enable more tasks for ModulePresentationsForCAP

--- a/site.yml
+++ b/site.yml
@@ -754,7 +754,12 @@
             docu_only: true
           - name: ModulePresentationsForCAP
             description: Category R-pres for CAP
-            docu_only: true
+            has_HOMALG_IO: true
+            tests_additional_packages_to_load:
+              - IO_ForHomalg
+              - RingsForHomalg
+              - GaussForHomalg
+            tests_only_basic: true
           - name: ModulesOverLocalRingsForCAP
             description: Category of modules over a local ring modeled by Serre quotients for CAP
             docu_only: true
