--- a/site.yml
+++ b/site.yml
@@ -655,10 +655,10 @@
               - RingsForHomalg
           - name: ComplexesAndFilteredObjectsForCAP
             description: Implementation of complexes, cocomplexes and filtered objects for CAP
-            docu_only: true
+            tests_only_basic: true
           - name: DeductiveSystemForCAP
             description: Deductive system for CAP
-            docu_only: true
+            tests_only_basic: true
           - name: FreydCategoriesForCAP
             description: Freyd categories - Formal (co)kernels for additive categories
             has_HOMALG_IO: true
@@ -677,10 +677,15 @@
             tests_only_basic: true
           - name: GeneralizedMorphismsForCAP
             description: Implementations of generalized morphisms for the CAP project
-            docu_only: true
+            tests_additional_packages_to_load:
+              - LinearAlgebraForCAP
+            tests_only_basic: true
           - name: GradedModulePresentationsForCAP
             description: Presentations for graded modules
-            docu_only: true
+            has_HOMALG_IO: true
+            tests_additional_packages_to_load:
+              - IO_ForHomalg
+            tests_only_basic: true
           - name: GroupRepresentationsForCAP
             description: Skeletal category of group representations for CAP
             has_HOMALG_IO: true
@@ -689,10 +694,10 @@
             tests_only_basic: true
           - name: HomologicalAlgebraForCAP
             description: Homological algebra algorithms for CAP
-            docu_only: true
+            tests_only_basic: true
           - name: InternalExteriorAlgebraForCAP
             description: Constructions for Modules over the Internal Exterior Algebra for CAP
-            docu_only: true
+            tests_only_basic: true
           - name: LinearAlgebraForCAP
             description: Category of Matrices over a Field for CAP
             tests_only_basic: true
@@ -706,7 +711,8 @@
             tests_only_basic: true
           - name: ModulesOverLocalRingsForCAP
             description: Category of modules over a local ring modeled by Serre quotients for CAP
-            docu_only: true
+            has_HOMALG_IO: true
+            tests_only_basic: true
           - name: MonoidalCategories
             description: Monoidal and monoidal (co)closed categories
             tests_additional_packages_to_load:
@@ -715,7 +721,7 @@
             tests_only_basic: true
           - name: ToricSheaves
             description: Toric sheaves as Serre quotients
-            docu_only: true
+            tests_only_basic: true
         ci_additional_repositories:
           - homalg_project
 
