--- a/tasks/meta_package.yml
+++ b/tasks/meta_package.yml
@@ -49,6 +49,7 @@
 - import_tasks: tasks/ci.yml
   vars:
     package: "{{ meta_package_enriched }}"
+    doc_packages: "{{ subpackages_enriched }}"
     is_meta_package: true
 
 - name: Import subpackage
