--- a/site.yml
+++ b/site.yml
@@ -438,6 +438,8 @@
           - Toposes
           - Locales
           - SubcategoriesForCAP
+          - QPA2
+          - HigherHomologicalAlgebra
 
 - name: FinSetsForCAP
   hosts: FinSetsForCAP
